--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,21 @@
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.18",
+    "docx": "^9.5.1",
+    "html-to-docx": "^1.8.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "jwt-decode": "^4.0.0",
+    "marked": "^17.0.1",
+    "pptxgenjs": "^4.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
