--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "docx": "^9.5.1",
     "html-to-docx": "^1.8.0",
     "html2canvas": "^1.4.1",
+    "jszip": "^3.10.1",
     "jspdf": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "marked": "^17.0.1",
@@ -28,7 +29,8 @@
     "react-router-dom": "^7.12.0",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
