--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,66 @@
-"backend/.env" 
+# ----------------------
+# Environment / secrets
+# ----------------------
+.env
+backend/.env
+frontend/.env.local
+*.secret
+
+# ----------------------
+# Python cache
+# ----------------------
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.sqlite3
+
+# ----------------------
+# Python virtual env
+# ----------------------
+venv/
+env/
+ENV/
+
+# ----------------------
+# Node / frontend
+# ----------------------
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+dist/
+build/
+*.log
+
+# ----------------------
+# Mac / Windows / Linux
+# ----------------------
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+
+# ----------------------
+# Zip / Large files
+# ----------------------
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# ----------------------
+# IDE / Editor files
+# ----------------------
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# ----------------------
+# Git
+# ----------------------
+*.orig
+*.rej
